# PianoTeacher

./: .gitignore  BUILD.md  BUILD_INSTRUCTIONS.md  CLAUDE.MD  OPTIMIZATIONS_README.md  README.md  RELEASE.md  SongclaveTwitch(1).mid  THEMES.md  index.html  package-lock.json  package.json  release.sh  style.css  test.keystore  test_midi.js  vite.config.js
.cargo/: config.toml
.github/: RELEASE_NOTES.md  RELEASE_NOTES_1.5.7.md  RELEASE_NOTES_2.7.1.md  RELEASE_NOTES_3.0.0.md  RELEASE_NOTES_4.0.0.md
.github/workflows/: build-apk.yml  build-windows.yml  piano-teacher-v2.yml  release.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
android/piano-teacher-v2/app/src/main/cpp/: CMakeLists.txt
app/: index.html
app/demo/: HalleluahTwitch.mid
app/themes/: forest-green.json  midnight-blue.json
docs/: BUILD.md  CONFIGURATION.md  MIGRATION_GUIDE.md  OPTIMIZATIONS.md  OPTIMIZATIONS_COMPLETE.md  OtherPromiseTwitch.mid  SHEET_MUSIC_EXPORT.md
electron/: main.js  preload.mjs
landing/: index.html  script.js  style.css
piano-teacher-v2/: .gitignore  README.md
piano-teacher-v2/app/: build.gradle.kts
piano-teacher-v2/gradle/: libs.versions.toml
scripts/: gen-android-keystore.sh
src/: App.css  App.jsx  AppDesktop.jsx  AppMobile.jsx  AppOptimized.jsx  index.css  main.jsx  useSong.js
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  (+1 more)
web/: PLAN_SYNTHESIA_ENHANCEMENTS.md  Piano-Teacher-v4.1.0.apk.idsig  index.html  package-lock.json  package.json  vite.mobile.config.js
(+317 files in other folders)
